# nonogram

./: CMakeLists.txt  CMakeSettings.json
Solver/: CMakeLists.txt  Solver.cpp  Solver.h
Solver/gamelogic/: board.h  simple_solver.h
Solver/gui/: imgui_impl_sdl_gl3.cpp
